--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>NTT Audit</title>
+    <title>COLIDAR</title>
   </head>
   <body>
     <div id="root"></div>
